--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.application.name= servicio-items
-server.port= 8002 
-servicio-productos.ribbon.listOfServers= localhost:8001, localhost:9001
+spring.application.name=servicio-items
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#servicio-productos.ribbon.listOfServers= localhost:8001, localhost:9001
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
